--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git remote add origin \u0016https://github.com/alaaelbarasi/test.git"
+    "url": "https://github.com/alaaelbarasi/test.git"
   },
   "author": "Alaa",
   "license": "ISC"
