--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "description": "testing node",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"npm run lite",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lite":"lite-server"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/alaaelbarasi/test.git"
   },
   "author": "Alaa",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "lite-server": "^2.5.4"
+  }
 }
